# threatintel-backend

./: Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  render.yaml  requirements.txt
app/: main.py
app/api/: routes.py
app/database/: base.py  csv_handler.py  mongodb_handler.py
app/scrapers/: news_scraper.py
app/utils/: database.py  talkback.py
config/: app_config.json  scraper_config.json
